public/styles/main.css
.container {
    padding: 20px;
}

.menu {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.menu h1 {
    flex: 1;
}

.menu button, .menu select {
    margin-left: 1rem;
}

.menu select {
    flex: 0;
    width: 300px;
    margin-bottom: 1rem;
}

textarea {
    font-family: monospace;
    min-height: 400px;
}

#webgl {
    min-height: 400px;
    width: 400px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

pre {
    width: 100%;
}

pre > code {
    width: 100%;
}

#source {
    min-height: 400px;
}

.column.fixed {
    width: auto;
    flex: 0;
}

#cost {
    transition: opacity ease 0.2s;
}

.controls {
    margin-top: 20px;
}

.controls .input {
    display: flex;
    flex-direction: row;
}

.disabled {
    opacity: 0.5;
}

label {
    font-weight: lighter;
    width: 180px;
    padding: 0.6rem 0;
}

input {
    flex: 1 1;
    padding: 5px;
    width: 0;
}

.group {
    flex: 1;
    display: flex;
}

.endpoint {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
}

.num {
    display: flex;
    flex-direction: column;
}

.num span {
    text-align: center;
}

.group span {
    padding: 5px;
}

.num span.description {
    font-weight: lighter;
    font-size: 0.2em;
}

#toolbar button {
    margin-right: 5px;
}

